# Branch-and-Bound

./: CMakeLists.txt  README.md  cvxqp.cpp  cvxqp.hpp  functional.hpp  iostream.hpp  pycvxqp.cpp  range.hpp  test.cpp  test.py  tuple.hpp
